[metadata]
name = top4grep
version = attr: top4grep.__version__
url = https://github.com/Kyle-Kyle/top4grep
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
license = BSD 2 Clause
license_files = LICENSE
description = A grepping tool for top-4 security conferences
long_description = file: README.md
long_description_content_type = text/markdown

[options]
install_requires =
    sqlalchemy >= 1.4
    colorlog
    beautifulsoup4
    nltk
    abc
    selenium

python_requires = >= 3.8
packages = find:

[options.entry_points]
console_scripts =
    top4grep = top4grep.__main__:main
